[metadata]
author = makepath
version = 0.0.1
license = MIT
license_file = LICENSE
long_description = file: README.rst
long_description_content_type = text/markdown
name = porcupine
platforms = any
url = https://github.com/makepath/porcupine

[options]
include_package_data = True
packages = find:
install_requires =
    numpy
    pandas
    xarray
python_requires = >=3.10
zip_safe = False
