[metadata]
author = makepath
version = 0.1.0
license = MIT
license_file = LICENSE
long_description = file: README.rst
long_description_content_type = text/markdown
name = medaprep
platforms = any
url = https://github.com/makepath/medaprep

[options]
include_package_data = True
packages = find:
install_requires =
    bokeh
    colorcet
    folium
    numpy
    pandas
    scipy
    shapely
    xarray
python_requires = >=3.10
zip_safe = False
